doctorsTimetables and doctorsAppointments correction of deficiencies